Creating a Portfolio Website

--- a/Personal_Projects/Website/index.html
+++ b/Personal_Projects/Website/index.html
@@ -1,35 +1,19 @@
-<!-- Continue at 21 min and 30s (Fixing website appearance for small displays. -->
+<!-- https://www.youtube.com/watch?v=_xkSvufmjEs&list=WL&index=1 stopped at 11 min -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>University Website Design</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <section class="header">
-        <nav>
-            <a href="index.html"><img src="images/logo.png"></a>
-            <div class="nav-links">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Course</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    <div class="text-box">
-        <h1> World's Biggest University</h1>
-        <p> Making website is now one of the easiest this in the world. You just need to learn HTML, CSS, <br> JavaScript
-            and you're good to go.</p>
-        <a href="" class="hero-btn"> Visit Us To Know More. </a>
-    </div>
-    </section>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-1.0">
+        <title> Dev Steven Portfolio Website </title>
+        <link rel="stylesheet"
+               href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+              integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous"/>
+
+    </head>
+    <body>
+
+
+    </body>
 </html>
